# reeltime

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/tasks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_board_user_id_alter_board_description.py  0003_alter_board_user_id_column.py  0004_rename_user_id_board_user_and_more.py  0005_remove_board_user_remove_column_user_board_owner_and_more.py  0006_role_alter_board_name_alter_column_name_and_more.py  0007_remove_role_can_manage_all_tasks_and_more.py  0008_role_can_change_executor_role_can_create_tasks.py  0009_alter_boardmemberrelation_unique_together.py  0010_role_can_manage_all_tasks.py
backend/tasks/models/: __init__.py  abstract_models.py  board_member_relation_model.py  board_model.py  column_model.py  role_model.py  task_model.py
backend/tasks/serializers/: __init__.py  board_serializer.py  column_serializer.py  task_serializer.py
backend/users/migrations/: 0001_initial.py
